Fixed add statistics color for dark mode
Fixed add statistics color for dark mode

--- a/react-frontend/internship-api-frontend/src/pages/admin/AdminPage.css
+++ b/react-frontend/internship-api-frontend/src/pages/admin/AdminPage.css
@@ -10,6 +10,6 @@
   background:var(--background-color);
  
 }
-.modal-content form input{
+.modal-content form input,select{
   color:black;
 }
